make addon, hide tests from export

--- a/.gut_editor_config.json
+++ b/.gut_editor_config.json
@@ -3,8 +3,8 @@
  "compact_mode": false,
  "config_file": "res://.gutconfig.json",
  "dirs": [
-  "res://tests",
-  "res://scripts"
+  "res://addons/godot-coroutine-utilities/tests",
+  "res://addons/godot-coroutine-utilities/scripts"
  ],
  "disable_colors": false,
  "double_strategy": 1,
@@ -24,10 +24,10 @@
  "paint_after": 0.1,
  "panel_options": {
   "font_name": "CourierPrime",
-  "font_size": 17,
-  "hide_output_text": true,
+  "font_size": 30,
+  "hide_output_text": false,
   "hide_result_tree": false,
-  "hide_settings": true,
+  "hide_settings": false,
   "output_font_name": "CourierPrime",
   "output_font_size": 30,
   "use_colors": false
